<resources>
    <string name="app_name">MineSeeker</string>
    <string name="hyperLinkToHomePage"><a href="http://www.cs.sfu.ca/CourseCentral/276/bfraser/assignments.html">http://www.cs.sfu.ca/CourseCentral/276/bfraser/assignments.html</a></string>
    <string name="about">About   Welcome to the Pokemon themed MineSeeker game. This game is about finding all the hidden pokemonwhile using the least amount of scans.    This game was designed by Nirag Mehta and Warren Ho Kin</string>
    <string name="mineCounter">Found 0 out of4 Mines</string>
    <string name="scans_counter"># Scans use: 5</string>
    <string name="play">Play</string>
    <string name="options">Options</string>
    <string name="about_txt">About</string>
    <string name="view_scores">view scores</string>
    <string name="confirm">Confirm</string>
    <string name="grid_size">grid size</string>
    <string name="_20_mines">20 mines</string>
    <string name="_15_mines">15 mines</string>
    <string name="_10_mines">10 mines</string>
    <string name="_6_mines">6 mines</string>
    <string name="_6_rows_x_15_cols">6 rows x 15 cols</string>
    <string name="_5_rows_x_10_cols">5 rows x 10 cols</string>
    <string name="_4_rows_x_6_cols">4 rows x 6 cols</string>
    <string name="back">Back</string>
    <string name="highscore">Highscore</string>
    <string name="textview">TextView</string>
    <string name="safari">Safari</string>
    <string name="start">- start -</string>
    <string name="by_warren_ho_kin_and_nirag_mehta">By Warren Ho kin and Nirag Mehta</string>
    <string name="hello_boi">hello boi!</string>
</resources>
